# job-seek-meet

./: .env.development  .env.production  .gitignore  LICENSE  README.md  alembic.ini  index.html  package-lock.json  package.json  render.yaml  requirements.txt
app/backend/: .gitignore  crud.py  main.py  nodemon.json  package.json  pyproject.toml  requirements.txt  tsconfig.json
app/backend/api/: deps.py  main.py
app/backend/api/routes/: auth.py  user.py
app/backend/core/: __init__.py  config.py  security.py
app/backend/db/: models.py  seed.py  session.py
app/backend/prisma/: schema.prisma
app/backend/prisma/migrations/0_init/: migration.sql
app/backend/routes/: auth.py
app/backend/schema/: auth.py  user.py
app/backend/src/: app.ts  seed.ts  server.ts
app/backend/src/chat-management/: chat.helper.ts  socketAuth.ts
app/backend/src/chat-management/socket/: deleteMessage.ts  (+4 more)
app/backend/src/connection-management/: connection.controller.ts  connection.routes.ts
app/backend/src/group-management/: group.controller.ts  gruop.routes.ts
app/backend/src/seed/: index.ts
app/backend/src/types/: user.types.ts
app/backend/src/user-management/: auth.controller.ts  auth.routes.ts  notification.routes.ts  notifications.controller.ts  user.controller.ts  user.dto.ts  user.routes.ts
app/backend/src/util/: authenticateUser.ts  cloudinary.ts  constants.json  createJWT.ts  custom.error.ts  error.handler.ts  generateAuth.ts  generateToken.ts  jwt.authorize.ts  multer.ts  response.ts  secret.ts  secrets.ts  sendVerificationEmail.ts  validateUserDetails.ts
(+83 files in other folders)
