[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "alembic==1.14.1",
    "annotated-types==0.7.0",
    "anyio==4.5.2",
    "click==8.1.8",
    "exceptiongroup==1.2.2",
    "fastapi==0.115.11",
    "greenlet==3.1.1",
    "h11==0.14.0",
    "idna==3.10",
    "mako==1.3.9",
    "pyjwt<3.0.0,>=2.8.0",
    "markupsafe==2.1.5",
    "psycopg2==2.9.10",
    "pydantic==2.10.6",
    "pydantic-core==2.27.2",
    "python-dotenv==1.0.1",
    "sniffio==1.3.1",
    "sqlalchemy==2.0.39",
    "starlette==0.44.0",
    "typing-extensions==4.12.2",
    "uvicorn==0.33.0",
    "zipp==3.20.2",
    "bcrypt>=4.3.0",
    "jwt>=1.3.1",
]
